main/default/objects/Navigator_Widget__c/Navigator_Widget__c.object-meta.xml
<CustomObject>
    <label>Basecamp Widget</label>
    <nameField>
        <displayFormat>NWN-{00000}</displayFormat>
        <label>Widget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Basecamp Widgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>