main/default/objects/Navigator_Widget__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Widget Data Condition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Widget_Child_Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Missed</fullName>
                <label>Milestone Missed Status</label>
            </value>
            <value>
                <fullName>On-Going</fullName>
                <label>Milestone Ongoing Status</label>
            </value>
            <value>
                <fullName>All Email Activity</fullName>
            </value>
            <value>
                <fullName>Event/Session Registration Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>