main/default/objects/Navigator_Widget__c/fields/Navigator__c.field-meta.xml
<CustomField>
    <fullName>Navigator__c</fullName>
    <label>Navigator</label>
    <referenceTo>Navigator__c</referenceTo>
    <relationshipName>Navigator_Widgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>