main/default/objects/Navigator_Widget__c/fields/Widget_Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Widget_Child_Object__c</fullName>
    <label>Widget Child Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Widget_Parent_Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Participant_Milestone__c</fullName>
                <label>Participant Milestone</label>
            </value>
            <value>
                <fullName>Communication_Recipient__c</fullName>
                <label>Communication Recipient</label>
            </value>
            <value>
                <fullName>Session_Participant__c</fullName>
                <label>Participant/Participant Session</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>