main/default/objects/Navigator_Widget__c/fields/Widget_Label__c.field-meta.xml
<CustomField>
    <fullName>Widget_Label__c</fullName>
    <label>Widget Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>