main/default/objects/Navigator_Widget__c/fields/Widget_Name__c.field-meta.xml
<CustomField>
    <fullName>Widget_Name__c</fullName>
    <label>Widget Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Activity</fullName>
            </value>
            <value>
                <fullName>Event Activity</fullName>
            </value>
            <value>
                <fullName>Journey Milestones Catch-Up</fullName>
            </value>
            <value>
                <fullName>Journey Milestones Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>