main/default/objects/Navigator_Widget__c/fields/Widget_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Widget_Parent_Object__c</fullName>
    <label>Widget Parent Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Widget_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Event__c</fullName>
                <label>Event</label>
            </value>
            <value>
                <fullName>Journey__c</fullName>
                <label>Journey</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>