main/default/objects/Navigator_Widget__c/fields/Widget_Size__c.field-meta.xml
<CustomField>
    <fullName>Widget_Size__c</fullName>
    <label>Widget Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic Top Center S1</fullName>
            </value>
            <value>
                <fullName>Classic Upper Middle Left S2</fullName>
            </value>
            <value>
                <fullName>Classic Upper Middle Right S2</fullName>
            </value>
            <value>
                <fullName>Classic Lower Middle Left S2</fullName>
            </value>
            <value>
                <fullName>Classic Bottom Left S2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>