main/default/objects/Navigator_Widget__c/fields/Widget_Type__c.field-meta.xml
<CustomField>
    <fullName>Widget_Type__c</fullName>
    <label>Widget Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Widget_Size__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>