main/default/objects/Navigator_Widget__c/fields/Widget_View__c.field-meta.xml
<CustomField>
    <fullName>Widget_View__c</fullName>
    <label>Widget View</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Widget_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Activity Calendar</fullName>
            </value>
            <value>
                <fullName>Activity Date List</fullName>
            </value>
            <value>
                <fullName>Activity List/Links</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>